Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-32645

Coco highlighting is not started automatically

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • Qt Creator 17.0.0
    • Qt Creator 15.0.1, Qt Creator 16.0.1
    • Coco Support
    • None
    • 2b254c0d0 (master)

      This refers to the automatic highlighting according to code coverage that is activated via the "Analyze->Squish Coco..." dialog (if the Coco plugin is activated).

      After setting the CoverageBrowser path and the .csmes file in the dialog, CoverageBrowser is started and highlighting works as expected. But when Qt Creator is then closed and restarted, CoverageBrowser is not started and there is no highlighting.

      (Workaround: Open "Analyze->Squish Coco..." and press the "Open" button.)

        For Gerrit Dashboard: QTCREATORBUG-32645
        # Subject Branch Project Status CR V

            mred Markus Redeker
            mred Markus Redeker
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes