Coco Plugin: Start CoverageBrowser automatically at startup

If a .csmes file is specified, Qt Creator now automatically invokes
CoverageBrowser at startup so that code highlighting is enabled.

With this change, Qt Creator behaves like other IDEs when using
CoverageBrowser to highlight code coverage.

[ChangeLog][Coco Support][]
The Coco plugin now automatically starts CoverageBrowser if a .csmes
file is specified.

Fixes: QTCREATORBUG-32645
Change-Id: I6b2d33c0336ffc08c5dbad5fc4ce4cb37a696b10
Reviewed-by: Leena Miettinen <riitta-leena.miettinen@qt.io>
Reviewed-by: David Schulz <david.schulz@qt.io>